--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </header>
 
   <main>
+    <details><summary><a href="calendar/index.html" target="_blank">10 Year School Calendar</a>
     <details><summary><a href="Daily Lesson Plan/" target="_blank">Daily Lesson Planner</a></summary></details>
     <details><summary><a href="Weekly Lesson Plan/" target="_blank">Weekly Lesson Plan</a></summary></details>
     <details><summary><a href="Digital Weekly Notebook/" target="_blank">Digital Weekly Notebook</a></summary></details>
