--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
   </header>
 
   <main>
-    <details><summary><a href="calendar/index.html" target="_blank">10 Year School Calendar</a>
-    <details><summary><a href="Daily Lesson Plan/" target="_blank">Daily Lesson Planner</a></summary></details>
-    <details><summary><a href="Weekly Lesson Plan/" target="_blank">Weekly Lesson Plan</a></summary></details>
-    <details><summary><a href="Digital Weekly Notebook/" target="_blank">Digital Weekly Notebook</a></summary></details>
-    <details><summary><a href="Dice/" target="_blank">Rolling Dice</a></summary></details>
-    <details><summary><a href="Student Grouping/" target="_blank">Student Grouping</a></summary></details>
-    <details><summary><a href="Student Pairing/" target="_blank">Student Pairing</a></summary></details>
-    <details><summary><a href="Voice Level Visualizer/" target="_blank">Voice Level Visualizer</a></summary></details>
-    <details><summary><a href="Wheel of Names/" target="_blank">Wheel of Names</a></summary></details>
-    <details><summary><a href="BackToSchool Bingo/" target="_blank">Back To School Bingo</a></summary></details>
+    <details><summary><a href="calendar/index.html" target="_blank" rel="noopener">10 Year School Calendar</a></summary></details>
+    <details><summary><a href="Daily%20Lesson%20Plan/index.html" target="_blank" rel="noopener">Daily Lesson Planner</a></summary></details>
+    <details><summary><a href="Weekly%20Lesson%20Plan/index.html" target="_blank" rel="noopener">Weekly Lesson Plan</a></summary></details>
+    <details><summary><a href="Digital%20Weekly%20Notebook/index.html" target="_blank" rel="noopener">Digital Weekly Notebook</a></summary></details>
+    <details><summary><a href="hello-effect/index.html" target="_blank" rel="noopener">Message &amp; Hourglass</a></summary></details>
+    <details><summary><a href="Dice/index.html" target="_blank" rel="noopener">Rolling Dice</a></summary></details>
+    <details><summary><a href="Student%20Grouping/index.html" target="_blank" rel="noopener">Student Grouping</a></summary></details>
+    <details><summary><a href="Student%20Pairing/index.html" target="_blank" rel="noopener">Student Pairing</a></summary></details>
+    <details><summary><a href="Voice%20Level%20Visualizer/index.html" target="_blank" rel="noopener">Voice Level Visualizer</a></summary></details>
+    <details><summary><a href="Wheel%20of%20Names/index.html" target="_blank" rel="noopener">Wheel of Names</a></summary></details>
+    <details><summary><a href="BackToSchool%20Bingo/index.html" target="_blank" rel="noopener">Back To School Bingo</a></summary></details>
   </main>
 
   <footer>
