--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <details><summary><a href="Daily%20Lesson%20Plan/index.html" target="_blank" rel="noopener">Daily Lesson Planner</a></summary></details>
     <details><summary><a href="Weekly%20Lesson%20Plan/index.html" target="_blank" rel="noopener">Weekly Lesson Plan</a></summary></details>
     <details><summary><a href="Digital%20Weekly%20Notebook/index.html" target="_blank" rel="noopener">Digital Weekly Notebook</a></summary></details>
+    <details><summary><a href="rubric-lang/index.htm" target="_blank" rel="noopener">Descriptive Grading Rubric</a></summary></details>
     <details><summary><a href="hello-effect/index.html" target="_blank" rel="noopener">Message &amp; Hourglass</a></summary></details>
     <details><summary><a href="Dice/index.html" target="_blank" rel="noopener">Rolling Dice</a></summary></details>
     <details><summary><a href="Student%20Grouping/index.html" target="_blank" rel="noopener">Student Grouping</a></summary></details>
@@ -25,6 +26,7 @@
     <details><summary><a href="Voice%20Level%20Visualizer/index.html" target="_blank" rel="noopener">Voice Level Visualizer</a></summary></details>
     <details><summary><a href="Wheel%20of%20Names/index.html" target="_blank" rel="noopener">Wheel of Names</a></summary></details>
     <details><summary><a href="BackToSchool%20Bingo/index.html" target="_blank" rel="noopener">Back To School Bingo</a></summary></details>
+
   </main>
 
   <footer>
