--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <details><summary><a href="Daily%20Lesson%20Plan/index.html" target="_blank" rel="noopener">Daily Lesson Planner</a></summary></details>
     <details><summary><a href="Weekly%20Lesson%20Plan/index.html" target="_blank" rel="noopener">Weekly Lesson Plan</a></summary></details>
     <details><summary><a href="Digital%20Weekly%20Notebook/index.html" target="_blank" rel="noopener">Digital Weekly Notebook</a></summary></details>
-<details><summary><a href="index-lang.html" target="_blank" rel="noopener">Descriptive Grading Rubric</a></summary></details>
+    <details><summary><a href="index-lang.html" target="_blank" rel="noopener">Descriptive Grading Rubric</a></summary></details>
+    <details><summary><a href="https://docs.google.com/presentation/d/165s4tsr7KI2NvGyFeGGO8NmldfOLVZ8wpYmK-DFx9sU/edit?usp=sharing" target="_blank" rel="noopener">Editable Sticky Note Template</a></summary></details>
     <details><summary><a href="hello-effect/index.html" target="_blank" rel="noopener">Message &amp; Hourglass</a></summary></details>
     <details><summary><a href="Dice/index.html" target="_blank" rel="noopener">Rolling Dice</a></summary></details>
     <details><summary><a href="Student%20Grouping/index.html" target="_blank" rel="noopener">Student Grouping</a></summary></details>
