--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <details><summary><a href="Wheel%20of%20Names/index.html" target="_blank" rel="noopener">Wheel of Names</a></summary></details>
   <details><summary><a href="BackToSchool%20Bingo/index.html" target="_blank" rel="noopener">Back To School Bingo</a></summary></details>
   <details><summary><a href="First%20Day/index.html" target="_blank" rel="noopener">Student Profile Wheel</a></summary></details>
+  <details><summary><a href="Timer%202/index.html" target="_blank" rel="noopener">Timer 2</a></summary></details>
 </main>
 
 
